LU-971 mdt: fix open resent issue with last_xid

req_xid_is_last() compares xid with one in client data,
but in master it is not updated in case of open without create.
Patch updates export lcd with last xid, transno and rc for open
requests.

Signed-off-by: Mikhail Pershin <tappro@whamcloud.com>
Change-Id: I9e769fecc1e93c7a556d4b9eeadc80a70369e901